--- a/votes.html
+++ b/votes.html
@@ -123,11 +123,11 @@
 
     <!-- Navigation Bar -->
     <div id="navbar">
-        <a href="index.html" class="link">Home</a>
-        <a href="vote.html" class="active">Vote</a>
-        <a href="ranks.html" class="link">Store</a>
-        <a href="events.html" class="link"> Events</a>
-        <a href="staff.html" class="link">Staff</a>
+        <a href="www.craftheaven.xyz" class="link">Home</a>
+        <a href="votes" class="active">Vote</a>
+        <a href="store" class="link">Store</a>
+        <a href="events" class="link"> Events</a>
+        <a href="staff" class="link">Staff</a>
     </div>
 
     <!-- Vote Websites Section -->
