Update and rename ranks.html to store.html

--- a/store.html
+++ b/store.html
@@ -166,11 +166,11 @@
     </header>
 
     <div id="navbar">
-        <a href="index.html" class="link">Home</a>
-        <a href="vote.html" class="link">Vote</a>
-        <a href="ranks.html" class="active">Store</a>
-        <a href="events.html" class="link">Events</a>
-        <a href="staff.html" class="link">Staff</a>
+        <a href="www.craftheaven.xyz" class="link">Home</a>
+        <a href="votes" class="link">Vote</a>
+        <a href="store" class="active">Store</a>
+        <a href="events" class="link">Events</a>
+        <a href="staff" class="link">Staff</a>
     </div>
 
 
