--- a/staff.html
+++ b/staff.html
@@ -174,9 +174,9 @@
     <div id="navbar">
         <a href="www.craftheaven.xyz">Home</a>
         <a href="https://dyno.gg/form/b17ce169" target="_blank" >Apply</a>
-        <a href="contact.html" class="link">Contact</a>
-        <a href="events.html" class="link">Events</a>
-        <a href="staff.html" class="active">Meet The Staff</a>
+        <a href="contact" class="link">Contact</a>
+        <a href="events" class="link">Events</a>
+        <a href="staff" class="active">Meet The Staff</a>
     </div>
 
 
