--- a/staff.html
+++ b/staff.html
@@ -172,7 +172,7 @@
 
     <!-- Navigation Bar -->
     <div id="navbar">
-        <a href="www.craftheaven.xyz">Home</a>
+        <a href="index.html" class="link">Home</a>
         <a href="https://dyno.gg/form/b17ce169" target="_blank" >Apply</a>
         <a href="contact" class="link">Contact</a>
         <a href="events" class="link">Events</a>
