--- a/store.html
+++ b/store.html
@@ -166,7 +166,7 @@
     </header>
 
     <div id="navbar">
-        <a href="www.craftheaven.xyz" class="link">Home</a>
+        <a href="index.html" class="link">Home</a>
         <a href="votes" class="link">Vote</a>
         <a href="store" class="active">Store</a>
         <a href="events" class="link">Events</a>
