--- a/votes.html
+++ b/votes.html
@@ -123,7 +123,7 @@
 
     <!-- Navigation Bar -->
     <div id="navbar">
-        <a href="www.craftheaven.xyz" class="link">Home</a>
+        <a href="index.html" class="link">Home</a>
         <a href="votes" class="active">Vote</a>
         <a href="store" class="link">Store</a>
         <a href="events" class="link"> Events</a>
