--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
     <!-- Navigation Bar -->
     <div id="navbar">
         <a href="#" class="active">Home</a>
-        <a href="vote.html" class="link">Vote</a>
-        <a href="ranks.html" class="link">Store</a>
-        <a href="events.html" class="link">Events</a>
-        <a href="staff.html" class="link">Staff</a>
+        <a href="votes" class="link">Vote</a>
+        <a href="Store" class="link">Store</a>
+        <a href="events" class="link">Events</a>
+        <a href="staff" class="link">Staff</a>
     </div>
 
     <!-- Main Content Section -->
