--- a/events.html
+++ b/events.html
@@ -121,11 +121,11 @@
 
       <!-- Navigation Bar -->
       <div id="navbar">
-        <a href="index.html" class="link">Home</a>
-        <a href="vote.html" class="link">Vote</a>
-        <a href="ranks.html" class="link">Store</a>
-        <a href="events.html" class="active">Events</a>
-        <a href="staff.html" class="link">Staff</a>
+        <a href="index" class="link">Home</a>
+        <a href="vote" class="link">Vote</a>
+        <a href="ranks" class="link">Store</a>
+        <a href="events" class="active">Events</a>
+        <a href="staff" class="link">Staff</a>
     </div>
 
     <div id="events-container">
