--- a/contact.html
+++ b/contact.html
@@ -169,11 +169,11 @@
     <!-- Navigation Bar -->
     <div id="navbar">
         <div id="navbar">
-            <a href="index.html" class="link">Home</a>
+            <a href="index" class="link">Home</a>
             <a href="https://dyno.gg/form/b17ce169" target="_blank" >Staff Apply</a>
-            <a href="contact.html" class="active">Contact</a>
-            <a href="ranks.html" class="link">Store</a>
-            <a href="staff.html" class="link">Staff</a>
+            <a href="contact" class="active">Contact</a>
+            <a href="store" class="link">Store</a>
+            <a href="staff" class="link">Staff</a>
     </div>
 
     <!-- Main Content Section -->
