--- a/staff.html
+++ b/staff.html
@@ -193,6 +193,7 @@
                     <div class="staff-role">◈❯  Main Owner 👑</div>
                     <p class="staff-bio">Minecraft Designer, Builder, Developer.</p>
                     <div class="social-links">
+                        <a href="https://www.facebook.com/sabbirboii" target="blank">Facebook</a>
                         <a href="https://sniper.craftheaven.xyz" target="_blank">Website</a>
                         <a href="https://discord.com/channels/@me/1139307745569423461" target="_blank">Discord</a>
                     </div>
@@ -207,9 +208,9 @@
                     <div class="staff-role">◈❯ Owner 👑</div>
                     <p class="staff-bio">Janinah :)</p>
                     <div class="social-links">
-                        <a href="https://twitter.com/janesmith" target="_blank">Discord</a>
-                        <a href="https://facebook.com/janesmith" target="_blank">Facebook</a>
-                        <a href="https://instagram.com/janesmith" target="_blank">Instagram</a>
+                        <a href="https://discord.com/channels/@me/1146387004637052989" target="_blank">Discord</a>
+                        <a href="https://www.facebook.com/profile.php?id=100055430095566" target="_blank">Facebook</a>
+                        <a href="https://www.instagram.com/black7777jr/?hl=en" target="_blank">Instagram</a>
                     </div>
                 </div>
             </div>
@@ -220,11 +221,11 @@
                 <div class="staff-details">
                     <div class="staff-name">Noxity Cz </div>
                     <div class="staff-role">◈❯ Founder</div>
-                    <p class="staff-bio">Best Pvp'r ⚔</p>
+                    <p class="staff-bio">Pvp,War,Build ⚔</p>
                     <div class="social-links">
-                        <a href="https://twitter.com/janesmith" target="_blank">Discord</a>
-                        <a href="https://facebook.com/janesmith" target="_blank">Facebook</a>
-                        <a href="https://instagram.com/janesmith" target="_blank">Instagram</a>
+                        <a href="https://discord.com/channels/@me/1170820690270756924" target="_blank">Discord</a>
+                        <a href="https://www.facebook.com/profile.php?id=61553699990385" target="_blank">Facebook</a>
+                        <a href="https://www.instagram.com/noxitycz/?hl=en" target="_blank">Instagram</a>
                     </div>
                 </div>
             </div>
