--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <div id="navbar">
         <a href="#" class="active">Home</a>
         <a href="votes" class="link">Vote</a>
-        <a href="Store" class="link">Store</a>
+        <a href="store" class="link">Store</a>
         <a href="events" class="link">Events</a>
         <a href="staff" class="link">Staff</a>
     </div>
