--- a/events.html
+++ b/events.html
@@ -131,21 +131,23 @@
     <div id="events-container">
         <div class="event">
             <img src="event1.jpg" alt="Event 1">
-            <h2>Winter Gala</h2>
-            <p>Date: December 15, 2024</p>
-            <p>Location: Frosty Hall</p>
-            <p>Description: Join us for a magical evening filled with joy, music, and winter delights.</p>
+            <h2>Survival Games</h2>
+            <p>Date: January 19, 2024</p>
+            <p>Location: /server events</p>
+            <p>Description: Join Discord For More Info</p>
             <button class="play-now-button" onclick="copyIP('play.craftheaven.xyz')">Play Now</button>
         </div>
 
         <div class="event">
-            <img src="event2.jpg" alt="Event 2">
-            <h2>Snowflake Workshop</h2>
-            <p>Date: January 5, 2025</p>
-            <p>Location: Winter Wonderland Workshop</p>
-            <p>Description: Create your own unique snowflakes and experience the enchantment of winter crafting.</p>
-            <button class="play-now-button" onclick="copyIP('play.craftheaven.xyz')">Play Now</button>
+            <img src="https://www.bing.com/images/search?view=detailV2&ccid=9Y4GcGGs&id=E4983B985A108B3FD13766C41CB102E3D33C0DBF&thid=OIP.9Y4GcGGsfY-Rd9Y0OiEwWAHaFI&mediaurl=https%3a%2f%2fvignette.wikia.nocookie.net%2fmineplex%2fimages%2f9%2f9c%2fSurvivalGameslogo.png%2frevision%2flatest%3fcb%3d20190727041321&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.f58e067061ac7d8f9177d6343a213058%3frik%3dvw080%252bMCsRzEZg%26pid%3dImgRaw%26r%3d0&exph=693&expw=1000&q=survival+games+minecraft&simid=608022710954242939&FORM=IRPRST&ck=F71642B7F3D561BC15B8236D9066314E&selectedIndex=29&itb=1" alt="Event 2">
+            <h2>Unknown!</h2>
+            <p>Date: January 23, 2024</p>
+            <p>Location: meet at /hub or /lobby </p>
+            <p>Description: Unknown </p>
+            <button class="play-now-button" onclick="copyIP('play.craftheaven.xyz')">Wait</button>
         </div>
+
+        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fsabbirboii%2Fposts%2Fpfbid0e2U9aEMAnxJuhhHaBW21Dm43gd6CRQP7F7Fpa567yA9ShZj8wXmxMmkjcZQy8hPZl&show_text=true&width=500" width="500" height="462" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
         <!-- Add more events as needed -->
     </div>
