--- a/events.html
+++ b/events.html
@@ -123,7 +123,7 @@
       <div id="navbar">
         <a href="index" class="link">Home</a>
         <a href="vote" class="link">Vote</a>
-        <a href="ranks" class="link">Store</a>
+        <a href="store" class="link">Store</a>
         <a href="events" class="active">Events</a>
         <a href="staff" class="link">Staff</a>
     </div>
