--- a/events.html
+++ b/events.html
@@ -130,7 +130,7 @@
 
     <div id="events-container">
         <div class="event">
-            <img src="event1.jpg" alt="Event 1">
+            <img src="https://vignette.wikia.nocookie.net/mineplex/images/9/9c/SurvivalGameslogo.png/revision/latest?cb=20190727041321" alt="Event 1">
             <h2>Survival Games</h2>
             <p>Date: January 19, 2024</p>
             <p>Location: /server events</p>
