--- a/events.html
+++ b/events.html
@@ -139,7 +139,7 @@
         </div>
 
         <div class="event">
-            <img src="https://www.bing.com/images/search?view=detailV2&ccid=9Y4GcGGs&id=E4983B985A108B3FD13766C41CB102E3D33C0DBF&thid=OIP.9Y4GcGGsfY-Rd9Y0OiEwWAHaFI&mediaurl=https%3a%2f%2fvignette.wikia.nocookie.net%2fmineplex%2fimages%2f9%2f9c%2fSurvivalGameslogo.png%2frevision%2flatest%3fcb%3d20190727041321&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.f58e067061ac7d8f9177d6343a213058%3frik%3dvw080%252bMCsRzEZg%26pid%3dImgRaw%26r%3d0&exph=693&expw=1000&q=survival+games+minecraft&simid=608022710954242939&FORM=IRPRST&ck=F71642B7F3D561BC15B8236D9066314E&selectedIndex=29&itb=1" alt="Event 2">
+            <img src="https://pic.onlinewebfonts.com/thumbnails/icons_204013.svg" alt="Event 2">
             <h2>Unknown!</h2>
             <p>Date: January 23, 2024</p>
             <p>Location: meet at /hub or /lobby </p>
