--- a/staff.html
+++ b/staff.html
@@ -206,7 +206,7 @@
                 <div class="staff-details">
                     <div class="staff-name">Ariyan Winter boy</div>
                     <div class="staff-role">◈❯ Owner 👑</div>
-                    <p class="staff-bio">Janinah :)</p>
+                    <p class="staff-bio">Discord Developer</p>
                     <div class="social-links">
                         <a href="https://discord.com/channels/@me/1146387004637052989" target="_blank">Discord</a>
                         <a href="https://www.facebook.com/profile.php?id=100055430095566" target="_blank">Facebook</a>
@@ -221,7 +221,7 @@
                 <div class="staff-details">
                     <div class="staff-name">Noxity Cz </div>
                     <div class="staff-role">◈❯ Founder</div>
-                    <p class="staff-bio">Pvp,War,Build ⚔</p>
+                    <p class="staff-bio">Pvp,War,Build</p>
                     <div class="social-links">
                         <a href="https://discord.com/channels/@me/1170820690270756924" target="_blank">Discord</a>
                         <a href="https://www.facebook.com/profile.php?id=61553699990385" target="_blank">Facebook</a>
