--- a/staff.html
+++ b/staff.html
@@ -235,7 +235,7 @@
                 <img src="https://cdn.discordapp.com/attachments/1185615063596413089/1196352582269018132/images.jpg?ex=65b7512a&is=65a4dc2a&hm=f983d0abe825755c46ebce6bc948720eb68a6c2000ffc064ec0bb6537428e39b&" alt="Staff Member 2">
                 <div class="staff-details">
                     <div class="staff-name">Ahnaf  </div>
-                    <div class="staff-role">» Admin</div>
+                    <div class="staff-role">» Main Admin</div>
                     <p class="staff-bio">Web Developer,Minecraft,builder</p>
                     <div class="social-links">
                         <a href="https://discord.com/channels/@me/875411152803356773" target="_blank">Discord</a>
