--- a/staff.html
+++ b/staff.html
@@ -243,6 +243,20 @@
                 </div>
             </div>
 
+            <!-- Staff Member 4 -->
+             <div class="staff-card">
+                <img src="https://cdn.discordapp.com/attachments/1181600361027485736/1196378445953908816/4d60260f-b986-496d-8b12-f508aa2628d2-anime-boy-glaring-into-the-distance-4k-anime-boy-profile-picture-4.png?ex=65b76941&is=65a4f441&hm=b8061ecdef79401414e76d288b6d481f1b992e56385206f377e6268b2f558b3e&" alt="Staff Member 2">
+                <div class="staff-details">
+                    <div class="staff-name">Darkness Boy </div>
+                    <div class="staff-role">» Sr.Mod</div>
+                    <p class="staff-bio">Verified discord developer</p>
+                    <div class="social-links">
+                        <a href="https://discord.com/channels/@me/934692376658718731" target="_blank">Discord</a>
+                        <a href="https://www.facebook.com/profile.php?id=100082252603177&mibextid=rS40aB7S9Ucbxw6v" target="_blank">Facebook</a>
+                    </div>
+                </div>
+            </div>
+
             <!-- Add more staff members as needed -->
 
         </div>
