--- a/store.html
+++ b/store.html
@@ -181,8 +181,30 @@
         <div class="product">
             <h2>Heaven</h2>
             <i class="fas fa-crown fa-3x"></i>
-            <p>Unlock special features with Rank 1.</p>
-            <p>$5.00</p>
+            <p>・Weekly Claimblocks (CB) 20k</p>
+            <p>・Ingame Currency 50k</p>
+            <p>・ʜᴇᴀᴠᴇɴ Prefix Ingame</p>
+            <p>・ʜᴇᴀᴠᴇɴ + vip Role In Discord</p>
+            <p>・ʜᴇᴀᴠᴇɴ + ᴜʟᴛɪᴍᴀᴛᴇ Kit</p>
+            <p>・Ability To Get 8 Jobs</p>
+            <p>・Ability To Set 15 Homes</p>
+            <p>・Access To /tpa</p>
+            <p>・Access To /tpahere</p>
+            <p>・Access To /eglow</p>
+            <p>・Access To /craft</p>
+            <p>・Access To /anvil</p>
+            <p>・Access To /back</p>
+            <p>・Access To /enderchest</p>
+            <p>・Access To /grindstone</p>
+            <p>・Access To /smithingtable</p>
+            <p>・Access To /cartographytable</p>
+            <p>・Access To /loom</p>
+            <p>・Access To /anvil</p>
+            <p>・Access To /stonecutter</p>
+            <p>・Access To /nick</p>
+            <p>・Access To /heal</p>
+            <p>・Access To /fly (Special)</p>
+            <p>1730.ʙᴅᴛ</p>
             <button class="buy-button" onclick="redirectToDiscord()">Buy Now</button>
         </div>
 
