--- a/store.html
+++ b/store.html
@@ -179,7 +179,7 @@
             <p>・Access To /nick</p>
             <p>・Access To /heal</p>
             <p>・Access To /fly (Special)</p>
-            <p>1730.ʙᴅᴛ</p>
+            <h3>1730.ʙᴅᴛ</h3>
             <button class="buy-button" onclick="redirectToDiscord()">Buy Now</button>
         </div>
 
