--- a/store.html
+++ b/store.html
@@ -179,7 +179,7 @@
             <p>・Access To /nick</p>
             <p>・Access To /heal</p>
             <p>・Access To /fly (Special)</p>
-            <h3>1730.ʙᴅᴛ https://cdn.discordapp.com/attachments/1145976627969413120/1197089969936793610/Pngtreebangladeshi_taka_symbol_on_gold_8791216_3.png?ex=65b9ffe9&is=65a78ae9&hm=2d01bcb5e87c3bad2f0ddb67c0b528356a6f7117ec88387521ea2d85a753aeb1&</h3>
+            <h3>৳1730.ʙᴅᴛ </h3>
             <button class="buy-button" onclick="redirectToDiscord()">Buy Now</button>
         </div>
 
