--- a/store.html
+++ b/store.html
@@ -179,7 +179,12 @@
             <p>・Access To /nick</p>
             <p>・Access To /heal</p>
             <p>・Access To /fly (Special)</p>
-            <h4>৳1730.ʙᴅᴛ </h4>
+            <h5>ㅤㅤㅤㅤ ㅤ🏷Priceㅤㅤㅤㅤ ㅤ</h5>
+            <p>----------------------------</p>
+            <p>ㅤㅤ</p>
+            <h6>⚡Tier 1 - ৳1730.ʙᴅᴛ [1month]</h6>
+            <h6>⚡Tier 2 - ৳2760.ʙᴅᴛ [3month]</h6>
+            <h6>⚡Tier 3 - ৳7660.ʙᴅᴛ [6month]</h6>
             <button class="buy-button" onclick="redirectToDiscord()">Buy Now</button>
         </div>
 
