--- a/discord.html
+++ b/discord.html
@@ -1,12 +1,12 @@
 <html>
 
 <head>
-  <title>Discord redirect</title>
+  <title>Discord</title>
 </head>
 
 <body>
   <script>
-    window.location.replace("https://discord.com/invite/INVITECODE");
+    window.location.replace("https://discord.com/invite/DfJ54Te6Ph");
   </script>
 </body>
 
