--- a/discord.html
+++ b/discord.html
@@ -1,5 +1,29 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
+        <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/1131919773492584540/1197112224553123920/Craftheaven_1_1_1.gif?ex=65ba14a3&is=65a79fa3&hm=7885fa72a6a8e15f3d26ee75d03d979fa67558cb9c7f0d6f5a48c1a917406f16&" type="image/webp">
+        <link rel="icon" href="https://cdn.discordapp.com/attachments/1131919773492584540/1197112224553123920/Craftheaven_1_1_1.gif?ex=65ba14a3&is=65a79fa3&hm=7885fa72a6a8e15f3d26ee75d03d979fa67558cb9c7f0d6f5a48c1a917406f16&" type="image/webp">
+        <meta name="description" content="Check out the • Crafter's Heaven community on Discord - enjoy free voice and text chat."/>
+        <meta property="og:title" content="Discord • Crafters Heaven"/>
+        <link rel="canonical" href="https://www.craftheaven.xyz/discord"/>
+        <meta property="og:url" content="https://www.craftheaven.xyz/discord"/>
+        <meta property="og:description" content="Official Crafters Heaven Website Explore World "/>
+        <meta property="og:image:secure_url" content="https://cdn.discordapp.com/attachments/1131919773492584540/1197112224553123920/Craftheaven_1_1_1.gif?ex=65ba14a3&is=65a79fa3&hm=7885fa72a6a8e15f3d26ee75d03d979fa67558cb9c7f0d6f5a48c1a917406f16&"/>
+        <meta property="og:image" content="https://cdn.discordapp.com/attachments/1131919773492584540/1197112224553123920/Craftheaven_1_1_1.gif?ex=65ba14a3&is=65a79fa3&hm=7885fa72a6a8e15f3d26ee75d03d979fa67558cb9c7f0d6f5a48c1a917406f16&"/>
+        <meta property="profile:username" content="crafters Heaven"/>
+        <meta name="twitter:card" content="summary"/>
+        <meta name="twitter:title" content="Discord • Crafters Heaven"/>
+        <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/1131919773492584540/1197112224553123920/Craftheaven_1_1_1.gif?ex=65ba14a3&is=65a79fa3&hm=7885fa72a6a8e15f3d26ee75d03d979fa67558cb9c7f0d6f5a48c1a917406f16&"/>
+        <meta name="twitter:url" content="https://www.craftheaven.xyz/discord"/>
+        <link rel="preload" as="image" href="https://cdn.discordapp.com/attachments/1131919773492584540/1197112224553123920/Craftheaven_1_1_1.gif?ex=65ba14a3&is=65a79fa3&hm=7885fa72a6a8e15f3d26ee75d03d979fa67558cb9c7f0d6f5a48c1a917406f16&"/>
+        <title>Discord • Crafters Heaven</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.discordapp.com/attachments/1131919773492584540/1197112224553123920/Craftheaven_1_1_1.gif?ex=65ba14a3&is=65a79fa3&hm=7885fa72a6a8e15f3d26ee75d03d979fa67558cb9c7f0d6f5a48c1a917406f16&">
+        <link rel="manifest" href="https://bio.link/manifest.json">
+        <link rel="dns-prefetch" href="https://analytics.bio.link">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
 <head>
   <title>Discord</title>
 </head>
