--- a/discord.html
+++ b/discord.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="Discord • Crafters Heaven"/>
         <link rel="canonical" href="https://www.craftheaven.xyz/discord"/>
         <meta property="og:url" content="https://www.craftheaven.xyz/discord"/>
-        <meta property="og:description" content="Official Crafters Heaven Website Explore World "/>
+        <meta property="og:description" content="Check out the • Crafter's Heaven community on Discord - enjoy free voice and text chat."/>
         <meta property="og:image:secure_url" content="https://cdn.discordapp.com/attachments/1131919773492584540/1197112224553123920/Craftheaven_1_1_1.gif?ex=65ba14a3&is=65a79fa3&hm=7885fa72a6a8e15f3d26ee75d03d979fa67558cb9c7f0d6f5a48c1a917406f16&"/>
         <meta property="og:image" content="https://cdn.discordapp.com/attachments/1131919773492584540/1197112224553123920/Craftheaven_1_1_1.gif?ex=65ba14a3&is=65a79fa3&hm=7885fa72a6a8e15f3d26ee75d03d979fa67558cb9c7f0d6f5a48c1a917406f16&"/>
         <meta property="profile:username" content="crafters Heaven"/>
